--- a/Index.html
+++ b/Index.html
@@ -51,8 +51,8 @@
 
             <section id="pacman">
                 <div clase="section-inner">
-                    <h4><a href="URL">PacMan</a></h4>
-                    <img src=""> <!--Project Picture-->
+                    <h4><a href="https://github.com/JaegerNolte/Create-a-PacMan">PacMan</a></h4>
+                    <img src="PacMen.png"> 
                     <p>Description</p>
                 </div>
             </section>
