--- a/Index.html
+++ b/Index.html
@@ -50,15 +50,15 @@
             </section>
 
             <section id="pacman">
-                <div clase="section-inner">
+                <div class="section-inner">
                     <h4><a href="https://github.com/JaegerNolte/Create-a-PacMan">PacMan</a></h4>
-                    <img src="PacMen.png"> 
+                    <img class="pacmanimng" src="PacMen.png" /> 
                     <p>Description</p>
                 </div>
             </section>
 
             <section id="eye-excercise">
-                <div clase="section-inner">
+                <div class="section-inner">
                     <h5><a href="url">Eye Excercise</a></h5>
                     <img src=""> <!--Project Picture-->
                     <p>Description</p>
@@ -81,7 +81,7 @@
 
         </main>
         <footer>
-                Copyright Jaeger Nolte, 2023
+                Copyright&copy; Jaeger Nolte, 2023
         </footer>
     </body>
 </html>
