--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <img src="Jaeger-camp.jpg">
+            <img src="./pictures/Jaeger-camp.jpg">
             <nav>
                 <ul>
                     <li><a href="#main">Home</a></li>
@@ -21,7 +21,7 @@
         <main>
             <section id="main">
                     <div class="section-inner">
-                        <img src="Crazy-Jaeger.jpg" class="profile-img">
+                        <img src="./pictures/Crazy-Jaeger.jpg" class="profile-img">
                         <h1>Jaegers Portfolio</h1>
                         <p>Introductory Video</p>
                         <iframe width="420" height="315"
@@ -52,7 +52,7 @@
             <section id="pacman">
                 <div class="section-inner">
                     <h4><a href="https://github.com/JaegerNolte/Create-a-PacMan">PacMan</a></h4>
-                    <img class="pacmanimng" src="PacMen.png" /> 
+                    <img class="pacmanimng" src="./pictures/PacMen.png" /> 
                     <p>Description</p>
                 </div>
             </section>
