--- a/Index.html
+++ b/Index.html
@@ -52,15 +52,13 @@
             <section id="pacman">
                 <div class="section-inner">
                     <h4><a href="https://github.com/JaegerNolte/Create-a-PacMan">PacMan</a></h4>
-                    <img class="pacmanimng" src="./pictures/PacMen.png" /> 
                     <p>Description</p>
                 </div>
             </section>
 
             <section id="eye-excercise">
                 <div class="section-inner">
-                    <h5><a href="url">Eye Excercise</a></h5>
-                    <img src=""> <!--Project Picture-->
+                    <h5><a href="https://github.com/JaegerNolte/eye-movement">Eye Excercise</a></h5>
                     <p>Description</p>
                 </div>
             </section>
