--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
             <section id="pacman">
                 <div class="section-inner">
-                    <h4><a href="https://github.com/JaegerNolte/Create-a-PacMan">PacMan</a></h4>
+                    <h4><a href="https://jaegernolte.github.io/Create-a-PacMan/">PacMan</a></h4>
                     <p>Description</p>
                 </div>
             </section>
 
             <section id="eye-excercise">
                 <div class="section-inner">
-                    <h5><a href="https://github.com/JaegerNolte/eye-movement">Eye Excercise</a></h5>
+                    <h5><a href="https://jaegernolte.github.io/eye-movement/">Eye Excercise</a></h5>
                     <p>Description</p>
                 </div>
             </section>
