--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                     <li><a href="#main">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Project List</a></li>
+                    <li><a href="#website-sources">Website Sources</a></li>
                     <li><a href="#contact">Contacts</a></li>
                 </ul>
             </nav>
@@ -60,6 +61,14 @@
                 <div class="section-inner">
                     <h1><a href="https://jaegernolte.github.io/eye-movement/">Eye Excercise</a></h1>
                     <p>Description</p>
+                </div>
+            </section>
+
+            <section id="website-sources">
+                <div class="section-inner">
+                    <h1>Sources</h1>
+                    <li><a href="style.css">CSS File</a></li>
+                    <li><a href="https://github.com/JaegerNolte/JaegerNolte.github.io">Github Repository</a></li>
                 </div>
             </section>
 
