--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
+        <Meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Germania+One&display=swap" rel="stylesheet">
         <title>Jaeger's Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -77,10 +81,11 @@
                     <h1>Contact me</h1>
                     <p>You can find me on:</p>
                     <ul>
-                        <li><a> href="">Twitter</a></li>
-                        <li><a> href="">Youtube</a></li>
-                        <li><a> href="">Instagram</a></li>
-                        <li><a> href="">Linkedin</a></li>
+                        <li><a href="">Twitter</a></li>
+                        <li><a href="">Youtube</a></li>
+                        <li><a href="">Instagram</a></li>
+                        <li><a href="">Linkedin</a></li>
+                        <li><a href="">Github</a></li>
                     </ul>
                     <p>Or, you can <a href="mailto:Jaeger.nolte@gmail.com">send me a Email</a>.</p>
                 </div>
