--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html>
     <head>
-        <Meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jaeger's Portfolio</title>
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Germania+One&display=swap" rel="stylesheet">
     </head>
 
     <body>
