--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                     <h1>Contact me</h1>
                     <p>You can find me on:</p>
                     <ul>
-                        <li><a href="">Twitter</a></li>
-                        <li><a href="">Youtube</a></li>
-                        <li><a href="">Instagram</a></li>
-                        <li><a href="">Linkedin</a></li>
-                        <li><a href="">Github</a></li>
+                        <li><a href="https://twitter.com/JaegerNolte">Twitter</a></li>
+                        <li><a href="https://www.youtube.com/@gameycrockett8698/featured">Youtube</a></li>
+                        <li><a href="https://www.instagram.com/jagermeister.9/?hl=en">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/jaeger-nolte-699a33281/">Linkedin</a></li>
+                        <li><a href="https://github.com/JaegerNolte">Github</a></li>
                     </ul>
                     <p>Or, you can <a href="mailto:Jaeger.nolte@gmail.com">send me a Email</a>.</p>
                 </div>
