--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </section>
             <section id="about">
                 <div class="section-inner">
-                    <h1>About me</h1>
-                    <p>about me info</p>
+                    <h1>Hi my name is Jaeger. I live in Austin, Texas. I'm a 20 year old student that is learning software development. I'm currently enrolled in a MIT coding bootcamp to receive a certification. The coding languages I know and/or learning are Javascript, HTML, and CSS. As of now I am starting to learn Python and C+ on the side.</h1>
+                    <p></p>
                 </div>
             </section>
 
@@ -53,14 +53,14 @@
             <section id="pacman">
                 <div class="section-inner">
                     <h1><a href="https://jaegernolte.github.io/Create-a-PacMan/">PacMan</a></h1>
-                    <p>Description</p>
+                    <p>The create a Pacman assigment is designed to create an new pacman, once everytime "Add PacMan" is clicked. When the PacMen are on screen they should move across the screen randomly and bounce off edges.</p>
                 </div>
             </section>
 
             <section id="eye-excercise">
                 <div class="section-inner">
                     <h1><a href="https://jaegernolte.github.io/eye-movement/">Eye Excercise</a></h1>
-                    <p>Description</p>
+                    <p>The Eye Movement Excercise is designed to follow the users mouse cursor.</p>
                 </div>
             </section>
 
