--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Jaeger's Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -32,8 +33,8 @@
             </section>
             <section id="about">
                 <div class="section-inner">
-                    <h1>Hi my name is Jaeger. I live in Austin, Texas. I'm a 20 year old student that is learning software development. I'm currently enrolled in a MIT coding bootcamp to receive a certification. The coding languages I know and/or learning are Javascript, HTML, and CSS. As of now I am starting to learn Python and C+ on the side.</h1>
-                    <p></p>
+                    <h1>About me</h1>
+                    <p>Hi my name is Jaeger. I live in Austin, Texas. I'm a 20 year old student that is learning software development. I'm currently enrolled in a MIT coding bootcamp to receive a certification. The coding languages I know and/or learning are Javascript, HTML, and CSS. As of now I am starting to learn Python and C+ on the side.</p>
                 </div>
             </section>
 
@@ -43,8 +44,8 @@
                     <h1>Project List</h1>
                         <Nav>
                             <ul>
-                                <li><a href="#pacman">PacMan</a></li>
-                                <li><a href="#eye-excercise">Eye Excercise</a></li>
+                                <li><a class="more" href="#pacman">PacMan</a></li>
+                                <li><a class="more" href="#eye-excercise">Eye Excercise</a></li>
                             </ul>
                         <nav>
                 </div>
@@ -52,14 +53,14 @@
 
             <section id="pacman">
                 <div class="section-inner">
-                    <h1><a href="https://jaegernolte.github.io/Create-a-PacMan/">PacMan</a></h1>
+                    <h1><a class="more" href="https://jaegernolte.github.io/Create-a-PacMan/" target="_blank">PacMan</a></h1>
                     <p>The create a Pacman assigment is designed to create an new pacman, once everytime "Add PacMan" is clicked. When the PacMen are on screen they should move across the screen randomly and bounce off edges.</p>
                 </div>
             </section>
 
             <section id="eye-excercise">
                 <div class="section-inner">
-                    <h1><a href="https://jaegernolte.github.io/eye-movement/">Eye Excercise</a></h1>
+                    <h1><a class="more" href="https://jaegernolte.github.io/eye-movement/" target="_blank">Eye Excercise</a></h1>
                     <p>The Eye Movement Excercise is designed to follow the users mouse cursor.</p>
                 </div>
             </section>
@@ -67,8 +68,8 @@
             <section id="website-sources">
                 <div class="section-inner">
                     <h1>Sources</h1>
-                    <li><a href="style.css">CSS File</a></li>
-                    <li><a href="https://github.com/JaegerNolte/JaegerNolte.github.io">Github Repository</a></li>
+                    <li><a class="more" href="style.css" target="_blank">CSS File</a></li>
+                    <li><a class="more" href="https://github.com/JaegerNolte/JaegerNolte.github.io" target="_blank">Github Repository</a></li>
                 </div>
             </section>
 
@@ -77,13 +78,13 @@
                     <h1>Contact me</h1>
                     <p>You can find me on:</p>
                     <ul>
-                        <li><a href="https://twitter.com/JaegerNolte">Twitter</a></li>
-                        <li><a href="https://www.youtube.com/@gameycrockett8698/featured">Youtube</a></li>
-                        <li><a href="https://www.instagram.com/jagermeister.9/?hl=en">Instagram</a></li>
-                        <li><a href="https://www.linkedin.com/in/jaeger-nolte-699a33281/">Linkedin</a></li>
-                        <li><a href="https://github.com/JaegerNolte">Github</a></li>
+                        <li><a class="more" href="https://twitter.com/JaegerNolte" target="_blank">Twitter</a></li>
+                        <li><a class="more" href="https://www.youtube.com/@gameycrockett8698/featured" target="_blank">Youtube</a></li>
+                        <li><a class="more" href="https://www.instagram.com/jagermeister.9/?hl=en" target="_blank">Instagram</a></li>
+                        <li><a class="more" href="https://www.linkedin.com/in/jaeger-nolte-699a33281/" target="_blank">Linkedin</a></li>
+                        <li><a class="more" href="https://github.com/JaegerNolte" target="_blank">Github</a></li>
                     </ul>
-                    <p>Or, you can <a href="mailto:Jaeger.nolte@gmail.com">send me a Email</a>.</p>
+                    <p>Or, you can <a class="more" href="mailto:Jaeger.nolte@gmail.com" target="_blank">send me a Email</a>.</p>
                 </div>
             </section>
 
