--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <a href="#main">Home</a>
             </li>
             <li>
-              <a href="index1.html">Contacts</a>
+              <a href="contacts.html">Contacts</a>
             </li>
              <a href="#">Placeholder</a>
             </li>
