--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </header>
           <div class="top-box top-box-a">
             <h4>Introduction Video</h4>
-            <p ><iframe src="https://youtu.be/Cs2w9uvK9AQ"></iframe></p> <!-- Youtube video -->
+            <p ><iframe width="560" height="315" src="https://www.youtube.com/embed/Cs2w9uvK9AQ?si=1fTTYWSt1rYGaP4j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p> <!-- Youtube video -->
           </div>
           <div class="top-box top-box-b">
             <h4>Webpage Sources</h4>
